2009-10-02  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.4.1
        
        * Orderable child nodes now implemented in JdbcProvider as well.
        
2009-09-27  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.4.0
        
        * Implemented orderable child nodes (though not yet for
        same name siblings) with FileProvider. This caused some
        minor changes in the Provider API.
        
        * Fixed minor problem in XML import which was failing a number
        of test cases.  We no longer import jcr:baseVersion as a reference
        since we don't yet support importing version histories.
        
2009-09-27  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.3.5
        
        * Added nt:folder nodetype, which was missing for some reason.
        
        * MemoryProvider now supports changing the workspace name.
        
2009-09-26  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.3.4
        
        * Made most of our providers really thread-safe by enabling
        MultiThreadTest.

        * 0.3.3
        
        * PathManager is now a singleton; which solves quite a few
        XML import problems - sharing Paths between multiple Sessions did
        not work (I have no idea what I was thinking when I made PathManager
        depend on a Session...)

        * 0.3.2
        
        * Workspace.copy() did not allow copying to nodes with same
        name siblings enabled.  Now fixed.
        
        * Fixed addNode() to support adding to indexed nodes; it was
        erroneusly thinking that /foo/bar[2]/blat is an illegal Node
        name...
        
2009-09-21  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.3.1
        
        * Vastly improved speeds for MemoryProvider by redesigning the 
        memory structure.  For example, removal is no longer an O(N^2) 
        operation, but O(log N).
        
2009-09-17  Janne Jalkanen <jalkanen@ecyrd.com>

        * 0.3.0
        